temporary fix long logotype overflow

--- a/assets/css/component/logotype.css
+++ b/assets/css/component/logotype.css
@@ -22,6 +22,7 @@
     align-items: center;
     justify-content: center;
     margin: 5pt 0;
+    max-width: calc(100% - 5rem);
     height: var(--h);
 }
 
